--- a/css/style.css
+++ b/css/style.css
@@ -64,11 +64,17 @@ header a.btn-header {
 .flex-header {
     display: flex;
     justify-content: space-between;
+    flex: 1 1;
 }
 
-.flex-header img {
+.flex-header .img {
     max-width: 680px;
     max-height: 490px;
+}
+
+.flex-header .img img {
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .text-header {
@@ -185,7 +191,105 @@ header a.btn-header {
 }
 
 footer {
-    position: relative;
-    z-index: -1;
+    padding: 190px 80px 60px 120px;
     background-color: var(--dark-cyan);
+    color: var(--pale-cyan);
+}
+
+footer > img {
+    margin-bottom: 40px;
+}
+
+footer > p {
+    float: right;
+    font-size: .8rem;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.address {
+ max-width: 370px;
+}
+
+.info {
+    display: flex;
+    margin-bottom: 30px;
+}
+
+.info img {
+    max-width: 100%;
+    max-height: 20px;
+    margin-right: 20px;
+}
+
+.info p {
+    max-width: 325px;
+}
+
+.footer a {
+    color: var(--pale-cyan);
+    font-size: 1.2rem;
+}
+
+.icons {
+    width: 260px;
+    display: flex;
+}
+
+.icons a {
+    color: var(--pale-cyan);
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid var(--pale-cyan);
+    border-radius: 15px;
+    margin-right: 10px;
+    font-size: .8rem;
+    
+}
+
+.footer ul li {
+    margin-bottom: 25px;
+}
+
+@media(max-width: 1250px) {
+    .flex-header {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .text-header {
+        text-align: center;
+        max-width: 100%;
+        align-items: center;
+        margin-bottom: 80px;
+    }
+
+    .card {
+        height: 100%;
+        grid-template-columns: 1fr;
+        grid-template-rows: 400px 1fr;
+        padding: 40px 80px;
+    }
+
+    .card .card-text {
+        text-align: center;
+        grid-row: 2;
+        max-width: 100%;
+    }
+
+    
+    .cards .card div:nth-child(1) {
+        justify-self: center;
+    }
+
+    .footer {
+        flex-direction: column;
+    }
+
 }
